# 2026-p1-nadiadmello

./: README.md  endpoints.http  pyproject.toml
todo/views/: routes.py
